package switchisep.project.dto;

import org.springframework.stereotype.Component;

@Component
public class ProjectCodeDTO {
    public String projectCode;
}
